# LyraIDE

./: BridgeManager.h  CMDWidget.h  CMakeLists.txt  FileSidebarWidget.h  MainUI.h  QCodeEditor.cpp  QCodeEditor.h  README.md  main.cpp
Resources/: Dark.colorscheme  Light.colorscheme  Linux.colorscheme  Resources.qrc  monaco.html  version.rc
libs/qtermwidget/: CMakeLists.txt
libs/qtermwidget/lib/: qtermwidget.h  qtermwidget_export.h  qtermwidget_version.h
